--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
+<h1>The Best Movies According to Akshat</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h3>Alice in Borderland</h3>
+<p>This is my favourite and goated series of all time on survival drama.</p>
+<h3>Exhuma</h3>
+<p>Really cool horror movie.</p>
+<h3>Shogun</h3>
+<p>Epic historical jdrama.</p>
